<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DropboxFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/kirli_beyaz"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/mdfoto_account"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />

            <include layout="@layout/line"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/email"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"></View>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.2"
                        android:ems="10"
                        android:inputType="textEmailAddress" />


                </LinearLayout>

                <include layout="@layout/line"></include>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/password"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"></View>

                    <EditText
                        android:id="@+id/editPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.64"
                        android:ems="10"
                        android:inputType="textPassword" />


                </LinearLayout>

                <include layout="@layout/line"></include>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/auto_login_enabled"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"></View>

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:checked="false" />


                </LinearLayout>

                <include layout="@layout/line"></include>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:onClick="settingsClick"
                            android:text="@string/action_register"
                            android:textAllCaps="false"
                            android:textColor="@color/text_color_blue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:onClick="settingsClick"
                            android:text="@string/action_login"
                            android:textAllCaps="false"
                            android:textColor="@color/text_color_blue" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_forget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:onClick="settingsClick"
                            android:text="@string/forget"
                            android:textAllCaps="false"
                            android:textColor="@color/text_color_blue" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_logout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:onClick="settingsClick"
                            android:text="@string/logout"
                            android:textAllCaps="false"
                            android:textColor="@color/text_color_blue" />
                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/line"></include>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dropbox_account"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />
            <include layout="@layout/line"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="@string/new_account"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></View>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/drop_box_integrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="@string/integrate1"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

            </LinearLayout>
            <include layout="@layout/line"></include>
            <TextView
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dropbox_integrate"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/sync"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />
            <include layout="@layout/line"></include>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/clean_sync_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="Clean Sync Log"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></View>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/drop_box_restore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="Dropbox Restore"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

            </LinearLayout>
            <include layout="@layout/line"></include>

            <TextView
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:text="@string/dropbox_integrate"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/photo_settings"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/color_gray_text" />

            <include layout="@layout/line"></include>


            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="Free App Space "
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></View>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">


                    <Button
                        android:id="@+id/free_app_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="85 Gb "
                        android:textAllCaps="false"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>
            <include layout="@layout/line"></include>


            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/store_photo_library"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:onClick="settingsClick"
                        android:text="Store photos in photo library"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color_blue" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></View>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">


                    <Switch
                        android:id="@+id/switch_store"
                        android:layout_margin="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
            <include layout="@layout/line"></include>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
